trying to make makefile work

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
     - name: Build Docker image and generate PDF
       run: |
-        make docker
+        make docker_actions
 
     - name: Commit PDF
       run: |
