pushes pdf to release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,6 @@ on:
       - '**/*.tex'
       - './*.tex'
 
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,9 +21,23 @@ jobs:
       run: |
         make docker
 
-    - name: Commit PDF
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add ./db.pdf
-        git commit -m "Add built PDF" && git push
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: \${{ github.ref }}
+        release_name: Release \${{ github.ref }}
+        draft: false
+        prerelease: false
+
+    - name: Upload PDF to Release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: \${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./db.pdf
+        asset_name: db.pdf
+        asset_content_type: application/pdf
