--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,33 +6,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Build Docker image and generate PDF
-      run: |
-        make docker
+      - name: Build Docker image and generate PDF
+        run: |
+          make docker
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: release-pdf-testing
-        release_name: Release for PDF Testing
-        draft: false
-        prerelease: false
+      - name: Create Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ./db.pdf
+          tag_name: release-pdf-testing
+          name: Release for PDF Testing
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload PDF to Release
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: \${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./db.pdf
-        asset_name: db.pdf
-        asset_content_type: application/pdf
